--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,11 @@
 } */
 
 body {
-  background-color: lightgrey;
-  font-family: Avenir, sans-serif
+  font-family: Avenir, sans-serif;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+  height: 100vh;
 }
 
 .container {
@@ -15,12 +18,36 @@ body {
 header {
   text-align: center;
   font-size: 120%;
-  background-color: yellow;
+  background-color: white;
   padding: 0.1em;
-  border-radius: 0.1em;
-  border-radius: 2em;
+  border-top-left-radius: 2em;
+  border-top-right-radius: 2em;
   justify-content: center;
   margin: 0 auto;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  grid-template-rows: 33% 33%;
+}
+
+#X-upload, #O-upload {
+  display: none;
+}
+
+#X-upload_label, #O-upload_label {
+  padding: 5px;
+  border: 1px solid black;
+  border-radius: 0.2em;
+  background-color: #eee;
+}
+
+#X-upload_label:hover, #O-upload_label:hover {
+  background-color: #ddd;
+  transition: 0.1s;
+  cursor: pointer;
+}
+
+h1 {
+  text-transform: uppercase;
 }
 
 #info {
@@ -43,6 +70,11 @@ header {
   font-size: 150%;
   padding: 5px 30px 5px 30px;
   margin: 0 10px 0 10px;
+  cursor: pointer;
+}
+
+#X-button.unclickable, #O-button.unclickable {
+  cursor: not-allowed;
 }
 
 #reset-button {
@@ -60,14 +92,20 @@ header {
 main {
   background-color: white;
   margin: 0 auto;
-  width: 450px;
-  height: 450px;
+  width: 100%;
+  height: 600px;
+  justify-content: center;
+  text-align: center;
+  border-bottom-left-radius: 2em;
+  border-bottom-right-radius: 2em;
+
 }
 
 .board {
   text-align: center;
-  width: 100%;
-  height: 100%;
+  margin: 0 auto;
+  width: 450px;
+  height: 450px;
   display: grid;
   grid-template-columns: 33% 33% 33%;
   grid-template-rows: 33% 33% 33%;
@@ -127,4 +165,66 @@ main {
   transition: 0.2s;
   background-color: royalblue;
   color: white;
+}
+
+.hstrike {
+  height: 10px;
+  width: 400px;
+  overflow: auto;
+  position: absolute;
+  left: 22px;
+  top: 70px;
+  z-index: 2;
+  display: none;
+}
+
+#h1.active, #h2.active, #h3.active,
+#v1.active, #v2.active, #v3.active,
+#d1.active, #d2.active  {
+  display: inline;
+}
+
+.Xwin {
+  background-color: red;
+}
+
+.Owin {
+  background-color: blue;
+}
+
+.vstrike {
+  height: 400px;
+  width: 10px;
+  overflow: auto;
+  position: absolute;
+  left: 70px;
+  top: 22px;
+  z-index: 2;
+  display: none;
+}
+
+#d1 {
+  transform: rotate(-45deg);
+  height: 510px;
+  width: 10px;
+  overflow: auto;
+  display: block;
+  position: absolute;
+  top: -180px;
+  left: 70px;
+  z-index: 2;
+  display: none;
+}
+
+#d2 {
+  transform: rotate(45deg);
+  height: 510px;
+  width: 10px;
+  overflow: auto;
+  display: inline;
+  position: absolute;
+  top: -180px;
+  left: 70px;
+  z-index: 2;
+  display: none;
 }
